Fixed sidebar gap issues

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@ img{
 }
 .main{
     grid-area: 2/2/3/3;
+    display: grid;
+    gap:25px;
+    grid-template-columns: 4fr 2fr;
+    /* grid-template-rows: repeat(2,1fr); */
+    margin-top: 50px;
 }
 footer{
     grid-area: 3/1/4/3;
@@ -68,4 +73,12 @@ ul{
     gap:25px;
     flex-flow: row nowrap;
 
+}
+.project-content{
+    grid-area:1/1/3/2;
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    column-gap: 25px;
+    row-gap: 50px;
+    /* padding:25px; */
 }
